Increase line height to prevent cutting off descenders

--- a/webui/react/src/components/ProjectCard.module.scss
+++ b/webui/react/src/components/ProjectCard.module.scss
@@ -8,7 +8,7 @@
 
   .name {
     font-size: 16px;
-    line-height: 20px;
+    line-height: 22px;
   }
   .footer {
     display: flex;
